Fix up hostname prefix feature

--- a/terraform/example/config.yml
+++ b/terraform/example/config.yml
@@ -12,5 +12,5 @@ compute:
     networks:
      - "ilab"
     hostname_pattern: "sv-b17-u37"
-    hostname_suffix: "jg"
+    hostname_prefix: "jg-"
 
