--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,6 +4,7 @@ gathering = smart
 forks = 30
 callback_whitelist = profile_tasks
 #host_key_checking = False
+roles_path = ./roles
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=240s -o PreferredAuthentications=publickey
