--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -30,6 +30,9 @@
 - hosts: all
   gather_facts: false
   become: true
+  vars:
+    openhpc_slurm_conf:
+      location: /mnt/nfs/etc/slurm/slurm.conf
   tasks:
     - name: install python3
       yum:
