--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -5,7 +5,7 @@ forks = 30
 callback_whitelist = profile_tasks
 #host_key_checking = False
 roles_path = ./roles
-inventory = ./hosts
+inventory = ./hosts-example
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=240s -o PreferredAuthentications=publickey
