--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,61 +1,79 @@
 ---
+- name: Configure hosts to use local mode when building an image
+  hosts: all
+  gather_facts: false
+  tasks:
+    - set_fact: 
+        ansible_connection: local
+      when: buildgroup is defined
+
 - name: Deploy nfs
   hosts: all
   become: yes
   tasks:
-  - include_role:
-      name: stackhpc.nfs
-    vars:
-      nfs_enable:
-        server: "{{ inventory_hostname in groups['login'] | first }}"
-        clients: true
-      nfs_server: "{{ groups['login'] | first }}"
-      nfs_export: "/export/nfs"
-      nfs_client_mnt_point: "/mnt/nfs"
-  - include_role:
-      name: stackhpc.openhpc
-    vars:
-      openhpc_cluster_name: "jg"
-      openhpc_slurm_control_host: "{{ groups['login'] | first }}"
-      openhpc_slurm_partitions:
-        - batch:
-          name: "batch"
-      openhpc_slurm_conf:
-         location: /mnt/nfs/etc/slurm/slurm.conf
-         shared_fs: true
-      openhpc_enable:
-         control: "{{ inventory_hostname in groups['login'] }}"
-         batch: "{{ inventory_hostname in groups['computes'] }}"
-         runtime: true
+  - block:
+          - name: Install OpenHPC repository
+            yum:
+              name: "https://github.com/openhpc/ohpc/releases/download/v1.3.GA/ohpc-release-1.3-1.el7.x86_64.rpm"
+              state: present
+          - include_role:
+              name: stackhpc.nfs
+            vars:
+              nfs_enable:
+                server: "{{ inventory_hostname in groups['login'] | first }}"
+                clients: true
+              nfs_server: "{{ groups['login'] | first }}"
+              nfs_export: "/export/nfs"
+              nfs_client_mnt_point: "/mnt/nfs"
+          - include_role:
+              name: stackhpc.openhpc
+            vars:
+              openhpc_cluster_name: "jg"
+              openhpc_slurm_control_host: "{{ groups['login'] | first }}"
+              openhpc_slurm_partitions:
+                - batch:
+                  name: "batch"
+              openhpc_slurm_conf:
+                 location: /mnt/nfs/etc/slurm/slurm.conf
+                 shared_fs: true
+              openhpc_enable:
+                 control: "{{ inventory_hostname in groups['login'] }}"
+                 batch: "{{ inventory_hostname in groups['computes'] }}"
+                 runtime: true
+    when: buildgroup is not defined or inventory_hostname == groups[buildgroup][0]
 - hosts: login
   gather_facts: false
   become: true
   tasks:
-    - name: Copy across local clouds.yaml
-      copy:
-        src: clouds.yaml
-        dest: /mnt/nfs/clouds.yaml
-        owner: root
-        group: root
-        mode: '0400'
+   - name: Copy across local clouds.yaml
+     copy:
+      src: clouds.yaml
+      dest: /mnt/nfs/clouds.yaml
+      owner: root
+      group: root
+      mode: '0400'
+     when: buildgroup is not defined or inventory_hostname == groups[buildgroup][0]
 - hosts: computes
   gather_facts: false
   become: true
   tasks:
-    - name: Create a directory if it does not exist
-      file:
-        path: /etc/openstack
-        state: directory
-        owner: root
-        group: root
-        mode: '0700'
-    - name: link clouds.yaml from nfs
-      file:
-        src: /mnt/nfs/clouds.yaml
-        dest: /etc/openstack/clouds.yaml
-        owner: root
-        group: root
-        state: link
+    - block:
+            - name: Create a directory if it does not exist
+              file:
+                path: /etc/openstack
+                state: directory
+                owner: root
+                group: root
+                mode: '0700'
+            - name: link clouds.yaml from nfs
+              file:
+                src: /mnt/nfs/clouds.yaml
+                dest: /etc/openstack/clouds.yaml
+                owner: root
+                group: root
+                state: link
+      when: buildgroup is not defined or inventory_hostname == groups[buildgroup][0]
+
 - hosts: computes
   gather_facts: false
   become: true
@@ -63,28 +81,31 @@
     openhpc_slurm_conf:
       location: /mnt/nfs/etc/slurm/slurm.conf
   tasks:
-    - name: install python3
-      yum:
-        name: python3
-    - name: create venv
-      command: python3 -m venv /opt/slurm-tools
-      args:
-        creates: /opt/slurm-tools
-    - name: install slurm-openstack-tools
-      shell: |
-        source /opt/slurm-tools/bin/activate
-        pip install --upgrade pip
-        pip install git+https://github.com/stackhpc/slurm-openstack-tools.git
-      args:
-        creates: /opt/slurm-tools/bin/slurm-openstack-rebuild
-    - name: add RebootProgram to slurm.conf
-      lineinfile:
-        path: "{{ openhpc_slurm_conf.location }}"
-        regexp: "^RebootProgram=.*$"
-        line: "RebootProgram=/opt/slurm-tools/bin/slurm-openstack-rebuild"
-      register: slurm_conf
-    - name: reconfigure slurm
-      shell:
-        cmd: "scontrol reconfigure"
-      when: slurm_conf.changed
-      run_once: true
+    - block:
+            - name: install python3
+              yum:
+                name: python3
+            - name: create venv
+              command: python3 -m venv /opt/slurm-tools
+              args:
+                creates: /opt/slurm-tools
+            - name: install slurm-openstack-tools
+              shell: |
+                source /opt/slurm-tools/bin/activate
+                pip install --upgrade pip
+                pip install git+https://github.com/stackhpc/slurm-openstack-tools.git
+              args:
+                creates: /opt/slurm-tools/bin/slurm-openstack-rebuild
+            - name: add RebootProgram to slurm.conf
+              lineinfile:
+                path: "{{ openhpc_slurm_conf.location }}"
+                regexp: "^RebootProgram=.*$"
+                line: "RebootProgram=/opt/slurm-tools/bin/slurm-openstack-rebuild"
+              register: slurm_conf
+            - name: reconfigure slurm
+              shell:
+                cmd: "scontrol reconfigure"
+              when: slurm_conf.changed
+              run_once: true
+              when: buildgroup is not defined
+      when: buildgroup is not defined or inventory_hostname == groups[buildgroup][0]
