--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -105,7 +105,6 @@
             - name: reconfigure slurm
               shell:
                 cmd: "scontrol reconfigure"
-              when: slurm_conf.changed
               run_once: true
-              when: buildgroup is not defined
+              when: buildgroup is not defined and slurm_conf.changed
       when: buildgroup is not defined or inventory_hostname == groups[buildgroup][0]
