--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -31,8 +31,11 @@
               openhpc_cluster_name: "jg"
               openhpc_slurm_control_host: "{{ groups['login'] | first }}"
               openhpc_slurm_partitions:
-                - batch:
-                  name: "batch"
+                - baremetal:
+                  name: "baremetal"
+                  default: true
+                - vm:
+                  name: "vm"
               openhpc_slurm_conf:
                  location: /mnt/nfs/etc/slurm/slurm.conf
                  shared_fs: true
