--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,5 +1,5 @@
 ---
 - src: https://github.com/stackhpc/ansible-role-openhpc
-  version: actions
+  version: jg-actions
   name: stackhpc.openhpc
 - src: stackhpc.nfs
