--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -3,6 +3,4 @@
   version: jg-actions
   name: stackhpc.openhpc
 - src: stackhpc.nfs
-- src: https://github.com/stackhpc/ansible-role-ofed
-  version: master
-  name: stackhpc.ofed
+- src: stackhpc.ofed
