--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -13,7 +13,7 @@
   tasks:
   - block:
           - name: Install OpenHPC repository
-            yum:
+            package:
               name: "https://github.com/openhpc/ohpc/releases/download/v1.3.GA/ohpc-release-1.3-1.el7.x86_64.rpm"
               state: present
           - include_role:
@@ -91,8 +91,8 @@
   tasks:
     - block:
             - name: install python3
-              yum:
-                name: python3
+              package:
+                name: python3,git
             - name: create venv
               command: python3 -m venv /opt/slurm-tools
               args:
